Bug fixes: - Fix sorting on Studies, Species, Products, and Assays cols - Fix positioning of expand/collapse button upon resizing - Remove svg file with duplicate down arrow image

--- a/theme/connector/view/_Learn.scss
+++ b/theme/connector/view/_Learn.scss
@@ -987,7 +987,6 @@ img.detail-has-data-very-small {
 
 .learn-grid-group-hd-collapsible .learn-grid-group-title {
   background-repeat: no-repeat;
-  background-position: right center;
   background-image: url(images/groups_collapse.svg);
   padding: 0 0 0 14px;
 }
